# cookiecutters

./: README.md  cookiecutter.json
poetry-project/: cookiecutter.json
poetry-project/{{ cookiecutter.__project_slug }}/: README.md  pyproject.toml
